# mcra

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  TODO.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: quality.yml
mcra/: __init__.py  cache.py  calculator.py  cli.py  cpi.py  formatters.py  fx.py  models.py  tui.py
mcra/data/: cpi_fallback.csv
tests/: test_cache.py  test_calculator.py  test_cli.py  test_cpi.py  test_formatters.py  test_fx.py
