[project]
name = "mcra"
version = "0.1.0"
description = "Multi-Currency Real Return Analyzer — calculates portfolio returns across currencies, adjusted for local inflation."
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.35",
    "pytest-asyncio>=0.25",
]

[project.scripts]
mcra = "mcra.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
