[project]
name = "mcra"
version = "0.1.0"
description = "Multi-Currency Real Return Analyzer — calculates portfolio returns across currencies, adjusted for local inflation."
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.35",
    "pytest-asyncio>=0.25",
    "mypy>=1.19",
    "black>=26.1",
    "ruff>=0.14",
]

[project.scripts]
mcra = "mcra.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
strict = true

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
]
